# neuralkg

./: .gitignore  README.md  pyproject.toml  setup.py
config/: datalog.yaml.template
neuralkg/datalog/engine/: aggregate.py  config.py  database.py  evaluator.py  frame.py  frame_factory.py  frame_interfaces.py  frame_types.py
neuralkg/datalog/engine/pandas_impl/: __init__.py  frame.py  rule_frame.py
neuralkg/datalog/model/: literal.py  rule.py  schema.py  terms.py  truth_value.py
neuralkg/datalog/parser/: datalog_parser.py
neuralkg/prolog/: __init__.py  bridge.py
prolog/: neuralkg.pl
test_data/: dl1_test.datalog
test_scripts/: datalog_eval.py  datalog_parse_script.py  datalog_script.py  export_sdd.py  klay_query.py  model_01.sdd  multi_db_test.py  predicates.pl  problog_data.pl  problog_query.py  prolog_integration_script.py  pykeen_extract.py  pykeen_score.py  pykeen_train.py  queries.json  scallop_script.py  sdd_model.sdd  sdd_model.vtree  triples.pl
